Bug 223466 - Attachment not displayed as icons anymore
Summary: Attachment not displayed as icons anymore
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messageviewer (other bugs)
Version First Reported In: 4.5
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-01-19 21:20 UTC by Thomas McGuire
Modified: 2010-02-08 21:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-01-19 21:20:10 UTC
When using View->Attachments->As Icons, the message viewer doesn't show any icons, it just shows the plain file name.
That makes the attachment indistinguishable from normal text.
Comment 1 Torgny Nyblom 2010-02-07 12:58:50 UTC
HTML seems to be ok, but atleast on my machine I get this:
-----
kmail(14987) MessageViewer::NodeHelper::writeNodeToTempFile: Create temp file:  "/home/kde-trunk/.kde-trunk/tmp-explosive/kmailR14987.index.2/kmime-content-id.diff"
kmail(14987)/kio (AccessManager) KIO::AccessManager::createRequest: GetOperation:  QUrl( "file:///home/kde-trunk/inst/share/apps/kmail/pics/quicklistOpened.png" )
kmail(14987)/kio (Scheduler) KIO::SchedulerPrivate::doJob: KIO::SimpleJob(0x2ed6400)
kmail(14987)/kio (Scheduler) KIO::SchedulerPrivate::scheduleJob: KIO::TransferJob(0x2ed6400)
kmail(14987)/kio (Scheduler) KIO::SchedulerPrivate::setJobPriority: KIO::TransferJob(0x2ed6400) 1
kmail(14987)/kio (Slave) KIO::Slave::createSlave: createSlave "file" for KUrl("file:///home/kde-trunk/inst/share/apps/kmail/pics/quicklistOpened.png")
kmail(14987)/kio (KIOConnection) KIO::ConnectionServer::listenForRemote: Listening on  "local:/home/kde-trunk/.kde-trunk/socket-explosive/kmaila14987.slave-socket"
kmail(14987)/kio (Slave) KIO::Slave::timeout: slave failed to connect to application pid= 15004  protocol= "file"
kmail(14987)/kio (Slave) KIO::Slave::timeout: Houston, we lost our slave, pid= 15004
kmail(14987)/kio (Slave) KIO::Slave::timeout: slave died pid =  15004
kmail(14987)/kio (Scheduler) KIO::SchedulerPrivate::jobFinished: KIO::TransferJob(0x2ed6400) KIO::Slave(0x2ec5620)
kmail(14987)/kio (AccessManager) KDEPrivate::AccessManagerReply::jobDone: 143
kmail(14987)/kio (Scheduler) KIO::SchedulerPrivate::slotSlaveDied: KIO::Slave(0x2ec5620)
kmail(14987)/kio (Scheduler) KIO::SchedulerPrivate::cancelJob: Doing nothing because I don't know job KIO::TransferJob(0x2ed6400)
-----

Could this be the reason (a kio error)?
Comment 2 Torgny Nyblom 2010-02-07 13:04:17 UTC
Forgot to add the rendering html code.

<div id="attachmentDiv2">
  <div>
    <a href="attachment:2?place=body">
      <img src="/home/kde-trunk/inst/share/icons/oxygen/48x48/mimetypes/application-octet-stream.png" border="0" style="max-width: 100%" alt="">
      kmime-content-id.diff
    </a>
  </div>
  <div>
  </div>
  <br>
</div>
Comment 3 Thomas McGuire 2010-02-07 13:28:45 UTC
After updating kdelibs/kio, I can now see the attachment quick list icon again, but still not the attachment icons in the body. I also don't get KIO errors anymore.
Comment 4 Thomas McGuire 2010-02-07 13:37:40 UTC
Actually, this seems just to be an issue with missing "file:///" in front of the URLs. Seems like WebKit is more strict than KHTML.
So one should grep for "img" in the OTP and the headerstyle code and add this everywhere.
I can't do this right now since I've got other changes in the OTP at the moment.
Comment 5 Torgny Nyblom 2010-02-08 21:37:13 UTC
SVN commit 1087322 by tnyblom:

Fix image search paths. (Strings that are separated by whitespace only count as one string, so kmail search for images under ".../libmessagelistlibmessageviewerlibmessagecore/...")

BUG: 223466



 M  +2 -2      kmstartup.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1087322