Fix image search paths. (Strings that are separated by whitespace only count as one string, so kmail search for images under ".../libmessagelistlibmessageviewerlibmessagecore/...")

BUG: 223466


svn path=/trunk/KDE/kdepim/kmail/; revision=1087322